Fix datepicker background, crank up z-index
fixes #62

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,3 +21,6 @@
 
 .bottom-buffer { margin-bottom:20px; }
 .top-buffer { margin-top:20px; }
+.datepicker.datepicker-dropdown {
+  z-index: 1190 !important
+}
